--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Arcu accumsan</h3>
+                  Click <a href="http://www.yahoo.com">here</a> to go to yahoo.
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon fa-laptop">
