--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Click <a href="https://sites.google.com/site/millseagles/">here</a> for unblocked games.
+               <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
