--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
+	free game by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Do you like unblocked games then press this button and start playing</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Spectral</h2>
-							<p>Click <a href="https://sites.google.com/site/millseagles/">here</a> for unblocked games.
+							<p>Click <a href="https://sites.google.com/site/millseagles/">here</a> for unblocked games.  
                <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
@@ -57,8 +57,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
+								<h2>well you going to press it or what.<br />
+								what does it take you to get off the couch i mean come on</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
@@ -73,22 +73,21 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
+							<div class="image"><img src="images/Terreria.jpg" alt="" /></div><div class="content">
+								<h2> press it and by the way on the left is a picture of a persons house</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
+							<div class="image"><img src="images/Amazing.jpg" alt="" /></div><div class="content">
+								<h2>pleaseeeeeee<br />
+								I will give you ten bucks</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
+							<div class="image"><img src="images/Terreria-3D.png" alt="" /></div><div class="content">
+								<h2>DO YOU WANT THE MONY OR NOT<br />
 								sed condimentum</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
